# Eadet-ConvNet

./: .pre-commit-config.yaml  README.md  config.py  data.py  jobs.py  main.py  model.py  pyproject.toml
src/eadet_convnet/: __init__.py  config.py  data.py  jobs.py  main.py  model.py
